newsroom-api/kube/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: newsroom-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsroom-api
  template:
    metadata:
      labels:
        app: newsroom-api
    spec:
      containers:
        - name: newsroom-api
          image: documocracy/newsroom
          ports:
            - containerPort: 8000
      restartPolicy: Always
      imagePullSecrets:
        - name: documocracy-docker-hub
